# autosynth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: example_math.yaml  example_qa.yaml  metaopt_mock.yaml  mock_demo.yaml  my_test.yaml
docs/: ARCHITECTURE.md
examples/: new_domain_template.py
examples/sample_docs/: agentic_self_instruct.md  photosynthesis.md
src/autodata/: __init__.py  _console.py  cli.py  config.py  dispatcher.py  dispatcher_batch.py  domain.py  evaluator.py  harness.py  llm.py  metaopt.py  models.py  orchestrator.py  pipeline.py  runner.py  safety.py  schemas.py  store.py  utils.py  writer.py
src/autodata/agents/: __init__.py  challenger.py  reflector.py  solver.py  verifier.py
src/autodata/dispatcher/: __init__.py  batch.py  core.py  hydration.py  local.py  progress.py
src/autodata/domains/: __init__.py  math_word_problems.py  qa_from_documents.py
src/autodata/llm/: __init__.py  client.py  mock.py  pricing.py  rate_limit.py  types.py
src/autodata/metaopt/: __init__.py  evaluation.py  mutation.py  optimizer.py  records.py  selection.py
src/autodata/store/: __init__.py  dao.py  schema.py  types.py
src/autodata/templates/: new_domain.py.tmpl
src/autosynth/: __init__.py  _console.py  _intro.py  acceptance.py  cli.py  config.py  domain.py  evaluator.py  export.py  harness.py  pipeline.py  runner.py  safety.py  schemas.py  utils.py
src/autosynth/agents/: __init__.py  auditor.py  challenger.py  loop_judge.py  reflector.py  solver.py  verifier.py
src/autosynth/dispatcher/: __init__.py  batch.py  core.py  hydration.py  local.py  progress.py
src/autosynth/domains/: __init__.py  math_word_problems.py  qa_from_documents.py
src/autosynth/llm/: __init__.py  client.py  mock.py  rate_limit.py  response_format.py  types.py
src/autosynth/metaopt/: __init__.py  evaluation.py  mutation.py  optimizer.py  records.py  selection.py
src/autosynth/store/: __init__.py  dao.py  schema.py  types.py
src/autosynth/templates/: new_domain.py.tmpl
tests/: conftest.py  test_acceptance.py  test_agent_helpers.py  test_audit.py  test_cli.py  test_config.py  test_dispatcher.py  test_dispatcher_batch.py  test_domain_loading.py  test_export.py  test_full_loop.py  test_harness.py  test_integration.py  test_intro.py  test_llm.py  test_metaopt.py  test_mock_provider.py  test_pure_pipeline.py  test_safety.py  test_schemas.py  test_store.py  test_writer.py
