[build-system]
requires = ["setuptools>=77", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "autosynth"
dynamic = ["version"]
description = "Agentic synthetic-data generation framework inspired by Meta FAIR's Autodata / Agentic Self-Instruct."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ahmad Abdallah" }]
keywords = [
    "synthetic-data",
    "llm",
    "agents",
    "self-instruct",
    "data-generation",
    "evaluation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "loguru>=0.7",
    "tenacity>=8.2",
    "litellm>=1.40",
]

[project.optional-dependencies]
hf = ["datasets>=2.18", "pyarrow>=15"]
dev = ["pytest>=8", "pytest-mock>=3.12", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/Ahmad8864/autosynth"
Issues = "https://github.com/Ahmad8864/autosynth/issues"

[project.scripts]
autosynth = "autosynth.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autosynth" = ["templates/*.tmpl"]

[tool.setuptools_scm]
version_file = "src/autosynth/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [".venv", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # long lines OK for prompt strings
    "B008",   # function-call defaults (typer.Option, Field) are intentional
    "SIM108", # ternary-vs-if is not always clearer
]

[tool.ruff.format]
quote-style = "double"
